Change name from "GrALoG" to "Gralog"
The old name is impossible to type correctly.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-GrALoG FX was originally written by Viktor Engelmann.
+Gralog was originally written by Viktor Engelmann.
 
 Other contributors are:
 
